add html and css

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="/styles/styles.css">
     
-    <title>My App</title>
+    <title>Caves</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
